fix: review content overflow

--- a/themes/bella/styles/section.reviews.scss
+++ b/themes/bella/styles/section.reviews.scss
@@ -76,8 +76,48 @@
 
               .field {
                 &:last-child,
-                &:nth-last-child(2) {
+                &:nth-last-child(2),
+                &:nth-last-child(3) {
                   grid-column: 1 / 3;
+                }
+
+                .images {
+                  display: flex;
+                  flex-wrap: wrap;
+                  gap: var(--spacing-8);
+
+                  .upload {
+                    position: relative;
+                    width: 60px;
+                    height: 60px !important;
+
+                    & > input[type="file"] {
+                      position: absolute;
+                      border-radius: var(--radius-sm);
+                      opacity: 0;
+                      scale: 0;
+                      appearance: none;
+                    }
+                  }
+
+                  .image {
+                    position: relative;
+                    height: 60px;
+
+                    & > img {
+                      border-radius: var(--radius-button);
+                      object-fit: cover;
+                      box-shadow: var(--shadow-lg);
+                    }
+
+                    & > button {
+                      position: absolute;
+                      z-index: 2;
+                      inset-inline-end: calc(var(--spacing-4) * -1);
+                      inset-block-start: calc(var(--spacing-4) * -1);
+                      background-color: color-mix(in srgb, currentcolor 15%, transparent) !important;
+                    }
+                  }
                 }
               }
             }
@@ -112,8 +152,13 @@
             gap: var(--spacing-16);
 
             article {
+              display: -webkit-box;
+              overflow: hidden;
               color: var(--color-on-surface-variant);
               word-break: break-all;
+              -webkit-box-orient: vertical;
+              -webkit-line-clamp: 5;
+              line-clamp: 5;
             }
 
             .images {
@@ -179,13 +224,13 @@
             }
           }
         }
+      }
 
-        .items {
-          .skeleton-item,
-          [ui-block="review"] {
-            display: flex;
-            flex-direction: column-reverse;
-          }
+      .items {
+        .skeleton-item,
+        [ui-block="review"] {
+          display: flex;
+          flex-direction: column-reverse;
         }
       }
     }
